# myday-web

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  configure-app.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.husky/: pre-commit
api/: store-warranty-receipt.rs  update-prices.rs
dev-dist/: sw.js
src/: App.tsx  index.css  index.d.ts  main.tsx  serviceWorkerRegistration.ts
src/components/atoms/: index.ts
src/components/bottom-bar/: bottom-bar.tsx
src/components/layouts/: main-layout.tsx
src/components/organisms/: index.ts
src/components/todo-list/: todo-list.tsx
src/config/: database.constants.ts  dexie-cloud.config.ts  errors.constants.ts
src/entities/: todo.entity.ts
src/hooks/: use-dexie-sync.ts  use-keyboard-visibility.ts  use-pwa-install.ts  use-query-param-state.ts
src/hooks/budget/: use-budget-analysis.ts  use-budget.ts  use-update-budget.ts
src/hooks/expenses/: index.ts  (+18 more)
src/lib/: budget.utils.test.ts  budget.utils.ts  calendar.utils.ts  currency.utils.test.ts  currency.utils.ts  dates.utils.test.ts  dates.utils.ts  formatters.utils.test.ts  formatters.utils.ts  handle-error.utils.test.ts  handle-error.utils.ts  investment-form.utils.test.ts  investment-form.utils.ts  investment-settings.utils.test.ts  investment-settings.utils.ts  investment.utils.test.ts  investment.utils.ts  toast.ts
src/pages/: categories.tsx  expense-add.tsx  expense-edit.tsx  expenses.tsx  home.tsx  investment-accounts.tsx  investments.tsx  settings.tsx
src/repository/: budget.db.ts  category.db.ts  db.ts  expense.db.ts  index.ts  investment.db.ts  todo.db.ts
src/utils/: api.ts
(+126 files in other folders)
