[package]
name = "myday-web"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
vercel_runtime = { version = "0.2.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multer = "3"
bytes = "1"
futures-util = "0.3"

# Each handler has to be specified as [[bin]]
# Note that you need to provide unique names for each binary
[[bin]]
name = "update-prices"
path = "api/update-prices.rs"

[[bin]]
name = "store-warranty-receipt"
path = "api/store-warranty-receipt.rs"

# This section configures settings for the release profile, which optimizes the build for performance.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
