[package]
name = "myday-web"
version = "1.0.0"
edition = "2021"

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
multer = "3"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
vercel_runtime = { version = "0.2.1" }

# Each handler has to be specified as [[bin]]
# Note that you need to provide unique names for each binary
[[bin]]
name = "update-prices"
path = "api/update-prices.rs"

[[bin]]
name = "store-warranty-receipt"
path = "api/store-warranty-receipt.rs"

# This section configures settings for the release profile, which optimizes the build for performance.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
